# bunka

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md
.agents/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: DIAGRAM.md  FOOTPRINTS.md  SPEC.md  TEST_REPORT.md  project_template_guide.md
src/: cli.rs  gui.rs  lib.rs  main.rs
